@@ -292,11 +292,6 @@ local void mmap_init_pagesize (void)
        For compatibility of the .mem files between the architectures,
        choose the same value for both here. */
     8192
-   #elif defined(UNIX_IRIX) && defined(MIPS)
-    /* Normal MIPSs have pagesize=4096, the Onyx platform has it =16384.
-       For compatibility of the .mem files between the architectures,
-       choose the same value for both here. */
-    16384
    #elif defined(UNIX_LINUX) && defined(IA64)
     /* The pagesize can be 4, 8, 16 or 64 KB.
        For compatibility of the .mem files, choose always the same value. */
