@@ -3473,9 +3473,7 @@ local void clear_tty_input (Handle handle) {
   end_system_call();
 }
 
-#if defined(UNIX_IRIX)
-  #define IS_EINVAL_EXTRA  (errno==ENOSYS)
-#elif defined(UNIX_CYGWIN32) /* for Woe95 and xterm/rxvt, and WoeXP /dev/null */
+#if defined(UNIX_CYGWIN32) /* for Woe95 and xterm/rxvt, and WoeXP /dev/null */
   #define IS_EINVAL_EXTRA  ((errno==EBADF)||(errno==EACCES)||(errno==EBADRQC))
 #elif defined(UNIX_DARWIN) || defined(UNIX_FREEBSD) || defined(UNIX_NETBSD) || defined(UNIX_OPENBSD)
   #if !defined(ENOTSUP)         /* OpenBSD */
